

                 SCons - a software construction tool

                            Change Log


RELEASE 2.1.0 - Mon, 09 Sep 2011 20:54:57 -0700

  From Anton Lazarev:
    - Fix Windows resource compiler scanner to accept DOS line endings.

  From Matthias:
    - Update MSVS documents to remove note indicating that only one
      project is currently supported per solution file.

  From Grzegorz Bizoń:
    - Fix long compile lines in batch mode by using TEMPFILE
    - Fix MSVC_BATCH=False (was treating it as true)

  From Justin Gullingsrud:
    - support -std=c++0x and related CXXFLAGS in pkgconfig (ParseFlags)

  From Vincent Beffara:
    - Support -dylib_file in pkgconfig (ParseFlags)

  From Gary Oberbrunner and Sohail Somani:
    - new construction variable WINDOWS_EMBED_MANIFEST to automatically
      embed manifests in Windows EXEs and DLLs.

  From Gary Oberbrunner:
    - Fix Visual Studio project generation when CPPPATH contains Dir nodes
    - Ensure Visual Studio project is regenerated when CPPPATH or CPPDEFINES change
    - Fix unicode error when using non-ASCII filenames with Copy or Install
    - Put RPATH in LINKCOM rather than LINKFLAGS so resetting
      LINKFLAGS doesn't kill RPATH
    - Fix precompiled headers on Windows when variant dir name has spaces.
    - Adding None to an Action no longer fails (just returns original action)
    - New --debug=prepare option to show each target as it's being
      prepared, whether or not anything needs to be done for it.
    - New debug option --debug=duplicate to print a line for each
      unlink/relink (or copy) of a variant file from its source file.
    - Improve error message for EnumVariables to show legal values.
    - Fix Intel compiler to sort versions >9 correctly (esp. on Linux)
    - Fix Install() when the source and target are directories and the
      target directory exists.
    
  From David Garcia Garzon:
    - Fix Delete to be able to delete broken symlinks and dir
      symlinks.
  